k8s/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zarpa-redirect-to-https
  namespace: zarpa
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zarpa-redirect-www
  namespace: zarpa
spec:
  redirectRegex:
    regex: ^https?://www\.(.*)
    replacement: https://${1}
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zarpa-cors-headers
  namespace: zarpa
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowOriginList:
      - "https://zarpa.arcobatrox.com.br"
      - "https://www.zarpa.arcobatrox.com.br"
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
      - X-Requested-With
    accessControlAllowCredentials: true
