k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zarpa-api-ingress
  namespace: zarpa
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    # traefik.ingress.kubernetes.io/router.middlewares: zarpa-redirect-www@kubernetescrd,zarpa-redirect-to-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - zarpa.arcobatrox.com.br
        - www.zarpa.arcobatrox.com.br
      secretName: zarpa-tls
  rules:
    - host: zarpa.arcobatrox.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zarpa-api
                port:
                  number: 80
    - host: www.zarpa.arcobatrox.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zarpa-api
                port:
                  number: 80
